src/objects/Call_Centre_Sales_Coaching_Record__c.object
<CustomObject>
    <description>Call centre coaching records designed for IBB Sales Call teams.</description>
    <fields>
        <fullName>ANC_follow_up_arranged__c</fullName>
        <description>A follow up call has been booked in the diary to confirm receipt with customer.</description>
        <inlineHelpText>A follow up call has been booked in the diary to confirm receipt with customer.</inlineHelpText>
        <label>ANC follow up arranged</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Funding__c</fullName>
        <inlineHelpText>Explain the account funding policy i.e partial funding, time limit, when will profit start being paid</inlineHelpText>
        <label>Account Funding</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acknowledge_buying_signals__c</fullName>
        <description>Did the consultant react positively to customer buying signals by re affirming how the product would be beneficial to the customers needs .</description>
        <inlineHelpText>Did the consultant react positively to customer buying signals by re affirming how the product would be beneficial to the customers needs .</inlineHelpText>
        <label>Acknowledge buying signals</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actions_set__c</fullName>
        <label>Actions set</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Appropriate_use_of_customers_name__c</fullName>
        <description>Did the consultant use the customers name appropriately throughout the call to control their attention? (suggested around signposting)</description>
        <inlineHelpText>Did the consultant use the customers name appropriately throughout the call to control their attention? (suggested around signposting)</inlineHelpText>
        <label>Appropriate use of customers name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ask_for_business__c</fullName>
        <description>did the consultant confirm with the customer the product they were going to open/process today for them e.g. So just to re-cap Mr Sajjad having discussed the most appropriate account with you you would like me to proceed with an application for the 60 day account today?  Customer Yes/No!!</description>
        <inlineHelpText>Did the consultant confirm with the customer the product they were going to open today for them e.g. So just to re-cap having discussed the most appropriate account with you you would like me to proceed with an application for the 60 day account today?</inlineHelpText>
        <label>Ask for business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bank_Details_captured__c</fullName>
        <description>Collected customer bank details by explaining that we ask for this information to help with our Electronic verfication, overcoming customer concerns if appropriate</description>
        <inlineHelpText>Collected customer bank details by explaining that we ask for this information to help with our Electronic verfication, overcoming customer concerns if appropriate</inlineHelpText>
        <label>Bank Details captured</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Close__c</fullName>
        <formula>IF(OR(TEXT(  Recap_call__c )=&quot;Yes&quot;, TEXT( Recap_call__c )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT(  Highlight_next_steps__c  )=&quot;Yes&quot;, TEXT(  Highlight_next_steps__c  )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT(  Confirm_customers_satisfaction__c  )=&quot;Yes&quot;, TEXT( Confirm_customers_satisfaction__c  )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT(  Recommendation__c )=&quot;Yes&quot;, TEXT( Recommendation__c )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT(  Offer_further_assistance__c  )=&quot;Yes&quot;, TEXT(  Offer_further_assistance__c  )=&quot;N/A&quot;), 2.5, 0)+
IF(OR(TEXT(  ANC_follow_up_arranged__c  )=&quot;Yes&quot;, TEXT(  ANC_follow_up_arranged__c )=&quot;N/A&quot;), 2.5, 0)+
IF(OR(TEXT(  Standard_call_close__c  )=&quot;Yes&quot;, TEXT(  Standard_call_close__c  )=&quot;N/A&quot;), 2.5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Close</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Opening_Points__c</fullName>
        <formula>IF(OR(TEXT( Greet_the_Customer__c )=&quot;Yes&quot;, TEXT( Greet_the_Customer__c )=&quot;N/A&quot;), 5, 0) + 
IF(OR(TEXT(  Understand_reason_for_calling__c )=&quot;Yes&quot;, TEXT(  Understand_reason_for_calling__c )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT(  Collection_of_Marketing_info__c )=&quot;Yes&quot;, TEXT(  Collection_of_Marketing_info__c )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT(  ID_V__c )=&quot;Yes&quot;, TEXT( ID_V__c  )=&quot;N/A&quot;), 5, 0) + 
IF(OR(TEXT(   Understand_customers_satisfaction_with_c__c   )=&quot;Yes&quot;, TEXT(  Understand_customers_satisfaction_with_c__c )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT( Understand_what_would_make_the_customer__c  )=&quot;Yes&quot;, TEXT(  Understand_what_would_make_the_customer__c  )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT(  Summarise_needs_and_match__c  )=&quot;Yes&quot;, TEXT( Summarise_needs_and_match__c )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT(  Identify_all_selling_opportunities__c  )=&quot;Yes&quot;, TEXT( Identify_all_selling_opportunities__c )=&quot;N/A&quot;), 2.5, 0)+
IF(OR(TEXT(  Customer_ownership__c   )=&quot;Yes&quot;, TEXT(  Customer_ownership__c   )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT(  Placing_customers_on_Hold__c  )=&quot;Yes&quot;, TEXT(   Placing_customers_on_Hold__c  )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT(   Full_DPA_Disclaimers__c  )=&quot;Yes&quot;, TEXT(  Full_DPA_Disclaimers__c  )=&quot;N/A&quot;), 5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Opening Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calls_Recorded__c</fullName>
        <inlineHelpText>Calls are recorded for training and monitoring purposes</inlineHelpText>
        <label>Calls Recorded</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coachee_s_Line_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coachee&apos;s Line Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Call_Centre_Coaching_Records3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Colleague_Signature__c</fullName>
        <label>Colleague Signature</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Collection_of_Marketing_info__c</fullName>
        <description>Did consultant ask where they had heard about IBB/products to discuss quoting Source Promo code where applicable.</description>
        <inlineHelpText>Did consultant ask where they had heard about IBB/products to discuss quoting Source Promo code where applicable.</inlineHelpText>
        <label>Collection of Marketing info</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments10__c</fullName>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments11__c</fullName>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments12__c</fullName>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_22__c</fullName>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_23__c</fullName>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_24__c</fullName>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliant__c</fullName>
        <formula>IF( 
OR(TEXT(  Greet_the_Customer__c )=&quot;No&quot;, 
TEXT(  ID_V__c )=&quot;No&quot;, 
TEXT(  Full_DPA_Disclaimers__c )=&quot;No&quot;, 
TEXT(  System_Question_Gather_all_required_in__c )=&quot;No&quot;, 
TEXT(  EKYC_Disclaimer_and_savings_disclaimer__c  )=&quot;No&quot;), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=01520000000fuOk&quot;, &quot;Non-Compliant&quot;), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=01520000000fuOf&quot;, &quot;Compliant&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compliant?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirm_customers_satisfaction__c</fullName>
        <description>Did the consultant during the call close confirm the customers satisfaction with the service received? e.g. Are you happy with everything we&apos;ve discussed today?</description>
        <inlineHelpText>Did the consultant during the call close confirm the customers satisfaction with the service received? e.g. Are you happy with everything we&apos;ve discussed today?</inlineHelpText>
        <label>Confirm customers satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correct_ID_V__c</fullName>
        <description>Did the customer come through verified.  If not did we complete manual verfication in line with agreed process.  Was this handled in an empathetic way for the customer?  If we could nopt verify the customer did we explain clearly why and this was for the customers own protection and what actions/alternatives are required/available to them</description>
        <inlineHelpText>Did the customer come through verified.  If not did we complete manual verfication in line with agreed process.  Was this handled in an empathetic way for the customer?</inlineHelpText>
        <label>Correct ID &amp;V</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <description>Please enter the customers name</description>
        <inlineHelpText>Please enter the customers name</inlineHelpText>
        <label>Customer Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_ownership__c</fullName>
        <description>Did the consultant set the agenda upfront for the whole call including timescales and discuss options and commitments including advantage of EKYC over ANC process</description>
        <inlineHelpText>Did the consultant set the agenda upfront for the whole call including timescales and discuss options and commitments including advantage of EKYC over ANC process</inlineHelpText>
        <label>Customer ownership</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Time_of_Call__c</fullName>
        <description>Please enter the date and time of the call that was monitored</description>
        <inlineHelpText>Please enter the date and time of the call that was monitored</inlineHelpText>
        <label>Date &amp; Time of Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_follow_up__c</fullName>
        <label>Date of follow up</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_of_coaching_given__c</fullName>
        <label>Description of coaching given</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Did_they_greet_the_customer__c</fullName>
        <inlineHelpText>Did they use the standard call opening adopting a warm and friendly tone, allowing the customer to respond where applicable? Inform the customer that the calls are recorded for training and monitoring purposes</inlineHelpText>
        <label>Did they greet the customer?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EBS_Customer_Number__c</fullName>
        <inlineHelpText>Please enter the customers account number</inlineHelpText>
        <label>EBS Customer Number</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EKYC_ANC_Processing__c</fullName>
        <formula>IF(OR(TEXT(  System_Question_Gather_all_required_in__c )=&quot;Yes&quot;, TEXT(  System_Question_Gather_all_required_in__c )=&quot;N/A&quot;), 5, 0) + 
IF(OR(TEXT(  Bank_Details_captured__c )=&quot;Yes&quot;, TEXT( Bank_Details_captured__c )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT(  EKYC_Disclaimer_and_savings_disclaimer__c  )=&quot;Yes&quot;, TEXT(  EKYC_Disclaimer_and_savings_disclaimer__c  )=&quot;N/A&quot;), 5, 0)+
IF(OR(TEXT( WRAP_call_correctly__c   )=&quot;Yes&quot;, TEXT(  WRAP_call_correctly__c )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT(   EKYC_Account_Block_Alert__c  )=&quot;Yes&quot;, TEXT(   EKYC_Account_Block_Alert__c  )=&quot;N/A&quot;), 2.5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EKYC ANC Processing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EKYC_Account_Block_Alert__c</fullName>
        <description>Did the agent correctly block the account apply special conditions and apply the correct alert/case notes for the customer?</description>
        <inlineHelpText>Did the agent correctly block the account apply special conditions and apply the correct alert/case notes for the customer?</inlineHelpText>
        <label>EKYC Account Block/Alert</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EKYC_Disclaimer_and_savings_disclaimer__c</fullName>
        <description>Was full disclaimer read out to the customer and customer consent obtained.  If EKYC fail then is this handled appropriately outlining the full KYC documentation requirements to the customer!</description>
        <inlineHelpText>Was full disclaimer read out to the customer and customer consent obtained.  If EKYC fail then is this handled appropriately outlining the full KYC documentation requirements to the customer!</inlineHelpText>
        <label>EKYC Disclaimer and savings disclaimer (</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Empathy__c</fullName>
        <description>Did the consultant actively listen to the customers request and clearly understand the customers requirements?  Did they use appropriate questionining and positive phrases e.g. rest assured I will get this resolved for you, I do understand your inconvenience?  I will be more than happy to get that sorted for you? I completeley understand your situation?</description>
        <inlineHelpText>Did the consultant actively listen to the customers request and clearly understand the customers requirements?  Did they use appropriate questionining and positive phrases e.g.  I will be more than happy to get that sorted for you?</inlineHelpText>
        <label>Empathy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Explain_product_features_and_benefits__c</fullName>
        <description>When discussing the features of the product did they promote the benefits conversationally by linking back or identifying customer needs specific to the customers needs and incorporate Sharia Complaint to IBB brand where applicable, promote unique selling selling point (USP)? E.g explanation of the halal savings, terms and conditions of account offered, how profit rates work, SMART Banking, Islamic principles behind the product.</description>
        <inlineHelpText>When discussing the features of the product did they promote the benefits conversationally by linking back or identifying customer needs  promote (USP)? E.g explanation of the halal savings, T&amp;C&apos;s, how profit rates work, SMART Banking,</inlineHelpText>
        <label>Explain product features and benefits</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Explained_Sharia_Aspect_of_the_product__c</fullName>
        <label>Explained Sharia Aspect of the product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feedback_provided_to_lead_generator__c</fullName>
        <description>Outcome of lead updated on sales force to enable colleague to see whether lead has been converted to a sale.</description>
        <inlineHelpText>Outcome of lead updated on sales force to enable colleague to see whether lead has been converted to a sale.</inlineHelpText>
        <label>Feedback provided to lead generator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follow_up_owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Follow up owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Call_Centre_Coaching_Records2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Friendly_and_helpful__c</fullName>
        <description>Was the consultants tone, pace and clarity warm and friendly towards the customer.  Did they use the customers name appropriately throughout the call, build customer rapport, match and mirror custoemr pace and tone (if appropriate).</description>
        <inlineHelpText>Was the consultants tone, pace and clarity warm and friendly towards the customer.  Did they use the customers name appropriately throughout the call, build customer rapport, match and mirror custoemr pace and tone (if appropriate).</inlineHelpText>
        <label>Friendly and helpful</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_DPA_Disclaimers__c</fullName>
        <description>Consent to hold details on our computer/consent to refer on and also consent to mail (Opt in or Opt out)</description>
        <inlineHelpText>Consent to hold details on our computer/consent to refer on and also consent to mail (Opt in or Opt out)</inlineHelpText>
        <label>Full DPA Disclaimers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Greet_the_Customer__c</fullName>
        <description>Did they use the standard call opening adopting a warm and friendly tone, allowing the customer to respond where applicable? Inform the customer that the calls are recorded for training and monitoring purposes</description>
        <inlineHelpText>Did they use the standard call opening adopting a warm and friendly tone, allowing the customer to respond where applicable? Inform the customer that the calls are recorded for training and monitoring purposes</inlineHelpText>
        <label>Greet the Customer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Highlight_next_steps__c</fullName>
        <description>Did the consultant clearly highlight the next step with the customer i.e. documentation to follow/any ANC call backs?</description>
        <inlineHelpText>Did the consultant clearly highlight the next step with the customer i.e. documentation to follow/any ANC call backs?</inlineHelpText>
        <label>Highlight next steps</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID_V__c</fullName>
        <description>Correct ID &amp; V process followed for identifying the customer</description>
        <inlineHelpText>Correct ID &amp; V process followed for identifying the customer</inlineHelpText>
        <label>ID&amp;V</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Identify_all_selling_opportunities__c</fullName>
        <description>Did the consultant pick up on any other buying signals to maximise any selling/cross-selling opportunities</description>
        <inlineHelpText>Did the consultant pick up on any other buying signals to maximise any selling/cross-selling opportunities</inlineHelpText>
        <label>Identify all selling opportunities</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_learning_points_next_call__c</fullName>
        <description>Maximum 3</description>
        <inlineHelpText>Please enter minimum of 1 and Maximum of 3 development areas</inlineHelpText>
        <label>Key learning points next call</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Line_Manager_Signature__c</fullName>
        <label>Line Manager Signature</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name_of_Coach__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name of Coach</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Call_Centre_Coaching_Records1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_of_coachee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name of coachee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Call_Centre_Coaching_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Offer_further_assistance__c</fullName>
        <description>Did the consultant during the call close ask the customer if they could be of further assistance? e.g. is there anything else I can help you with today?</description>
        <inlineHelpText>Did the consultant during the call close ask the customer if they could be of further assistance? e.g. is there anything else I can help you with today?</inlineHelpText>
        <label>Offer further assistance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_Call_Rating__c</fullName>
        <label>Overall Call Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Development required</fullName>
                </value>
                <value>
                    <fullName>Unacceptable- ROC required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_Commentary__c</fullName>
        <description>Add in specific overall commentary on the quality of the call</description>
        <inlineHelpText>Add in specific overall commentary on the quality of the call</inlineHelpText>
        <label>Overall Commentary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overall_tone_pace_and_pitch__c</fullName>
        <description>Overall tone, pace and pitch</description>
        <inlineHelpText>Overall tone, pace and pitch</inlineHelpText>
        <label>Overall tone, pace and pitch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_topic_of_coaching__c</fullName>
        <label>Overall topic of coaching</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Control</fullName>
                </value>
                <value>
                    <fullName>People</fullName>
                </value>
                <value>
                    <fullName>Systems</fullName>
                </value>
                <value>
                    <fullName>Procedures</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overcome_objections__c</fullName>
        <description>Did the consultant attempt to overcome the customers objection by understanding the customer whilst continuing to display an appropriate style to suit the customer?</description>
        <inlineHelpText>Did the consultant attempt to overcome the customers objection by understanding the customer whilst continuing to display an appropriate style to suit the customer?</inlineHelpText>
        <label>Overcome objections</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Person_Record_Associated__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Record Associated</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipName>Call_Centre_Coaching_Records</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>